# kafka_ediscovery

./: .gitignore  pyproject.toml  setup.py
kafka_ediscovery/: config.py  kafka_api.py
tests/: produce_test_data.py  test_kafka_api.py
